# microbit

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  justfile  linker.ld
.github/workflows/: build.yml
cmake/: arm-none-eabi-gcc.cmake
src/: CMakeLists.txt  main.c  startup.c
src/drivers/CMSIS/inc/: ARMCM4.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_cm4.h  mpu_armv7.h  system_ARMCM4.h
